roles/frontend_node.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  type: NodePort
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - nodePort: 30163
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: guestbook
