roles/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: hello-world
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - host: test.example.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: hello-world
           port:
             number: 8080
